Remove class from body tag in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </script>
 </head>
 
-<body class="home-page">
+<body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
   <header class="site-header">
     <a class="logo" href="index.html" aria-label="Art and Sunny Things logo">
