Add responsive design adjustments for site header and improved element spacing

--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,11 @@
     </div>
   </footer>
 
+  <div class="cursor-dot"></div>
+  <div class="cursor-outline"></div>
+
   <script src="js/toast.js" defer></script>
+  <script src="js/cursor.js" defer></script>
   <script src="js/main.js" defer></script>
   <script src="js/forms.js" defer></script>
   <script src="js/analytics.js" defer></script>
